# csm-units

./: .clang-format  .clang-tidy  .cmake-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md  index.html
.cache/clangd/index/: csm_units.cpp.E4112119E8DD5D92.idx  csm_units.hpp.5977E1F10901A0C9.idx
.github/workflows/: documentation.yaml  documentation.yml  install.yml  macos.yml  standalone.yml  style.yml  ubuntu.yml  windows.yml
all/: CMakeLists.txt
cmake/: CPM.cmake  tools.cmake
docs/: Doxyfile
docs/html/: absolute__magnitude_8h_source.html  algorithm_8h_source.html  almost__equals_8h_source.html  angle_8h_source.html  annotated.html  annotated_dup.js  args_8h_source.html  base__dimension_8h_source.html  basic__concepts_8h_source.html  binary__prefixes_8h_source.html  cgs_8h_source.html  class_answer.html  classallocator__ref-members.html  classallocator__ref.html  classappender-members.html  classappender.html  classarg__converter-members.html  classarg__converter.html  classassertion__failure-members.html  classassertion__failure.html  classbasic__cstring__view-members.html  classbasic__cstring__view.html  classbasic__format__arg-members.html  classbasic__format__arg.html  classbasic__format__arg_1_1handle-members.html  classbasic__format__arg_1_1handle.html  classbasic__format__args-members.html  classbasic__format__args.html  classbasic__format__context-members.html  classbasic__format__context.html  classbasic__format__parse__context-members.html  classbasic__format__parse__context.html  classbasic__format__string-members.html  classbasic__format__string.html  classbasic__memory__buffer-members.html  classbasic__memory__buffer.html  classbasic__printf__context-members.html  classbasic__printf__context.html  classbasic__printf__parse__context-members.html  classbasic__printf__parse__context.html  (+3658 more)
docs/html/search/: all_0.js  all_10.js  all_11.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_16.js  classes_17.js  classes_19.js  classes_1a.js  classes_2.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_b.js  classes_c.js  (+30 more)
docs/latex/: absolute__magnitude_8h_source.tex  algorithm_8h_source.tex  almost__equals_8h_source.tex  angle_8h_source.tex  annotated.tex  args_8h_source.tex  base__dimension_8h_source.tex  basic__concepts_8h_source.tex  binary__prefixes_8h_source.tex  cgs_8h_source.tex  class_answer.tex  classallocator__ref.tex  classappender.eps  classappender.tex  classarg__converter.tex  classassertion__failure.eps  classassertion__failure.tex  classbasic__cstring__view.tex  classbasic__format__arg.tex  classbasic__format__arg_1_1handle.tex  classbasic__format__args.tex  classbasic__format__context.tex  classbasic__format__parse__context.eps  classbasic__format__parse__context.tex  classbasic__format__string.tex  classbasic__memory__buffer.eps  classbasic__memory__buffer.tex  classbasic__printf__context.tex  classbasic__printf__parse__context.eps  classbasic__printf__parse__context.tex  classbasic__string__view.tex  classbasic__test__string.tex  classbigint.tex  classbuffered__file.tex  classbuild_1_1_pip.tex  classbytes.tex  classchar__converter.tex  classcompute-powers_1_1fp.tex  classconanfile_1_1_m_p_units_conan.eps  classconanfile_1_1_m_p_units_conan.tex  (+3260 more)
documentation/: CMakeLists.txt  Doxyfile  conf.py  doxygen-awesome.css
documentation/example/: new_unit.cpp  new_unit_and_base.cpp
documentation/pages/: about.dox
example/: new_unit.cpp  new_unit_and_base.cpp
include/csm_units/: absorbed_dose.hpp  acceleration.hpp  activity.hpp  amount.hpp  area.hpp  capacitance.hpp  catalytic_activity.hpp  concepts.hpp  conductance.hpp  csm_units.hpp  density.hpp  dose_equivalent.hpp  electric_charge.hpp  electric_current.hpp  energy.hpp  force.hpp  frequency.hpp  heat_capacity.hpp  illuminance.hpp  inductance.hpp  length.hpp  luminosity.hpp  luminous_flux.hpp  magnetic_flux.hpp  magnetic_flux_density.hpp  mass.hpp  molar_energy.hpp  molar_heat_capacity.hpp  molar_mass.hpp  molar_volume.hpp  momentum.hpp  plane_angle.hpp  potential.hpp  potential_electromotive_force.hpp  power.hpp  pressure.hpp  reciprocal_length.hpp  reciprocal_pressure.hpp  resistance.hpp  solid_angle.hpp  (+7 more)
source/: csm_units.cpp
source/csm_units/: Converter.hpp  DimArea.hpp  DimForce.hpp  DimLength.hpp  DimTime.hpp  base.hpp  converter.hpp  customary.hpp  definition.hpp  derived.hpp  dim_length.hpp  dim_mass.hpp  dimension.hpp  exponents.hpp  math.hpp  prefixes.hpp  pressure.hpp  sci_no.hpp  temperature.hpp  unit.hpp  unitbase.hpp  unitcast.hpp  util.hpp
source/csm_units/literal/: literal.hpp
source/csm_units/named_units/absorbed_dose/: dimension.hpp  gray.hpp
standalone/: CMakeLists.txt
standalone/source/: main.cpp
test/: CMakeLists.txt
test/source/: arithmetic.cpp  bench.cpp  benchcomp.cpp  common.hpp  comparison.cpp  conversion.cpp  converter.cpp  csm_units.cpp  customary.cpp  definition.cpp  demonstration.cpp  derived.cpp  dimension.cpp  exponents.cpp  literal.cpp  main.cpp  math.cpp  pressure.cpp  pressure_test.cpp  sci_no.cpp  size.cpp  temperature.cpp  temperature_test.cpp  unit.cpp  unitbase.cpp
test/source/named_units/: absorbed_dose.cpp  acceleration.cpp  activity.cpp  amount.cpp  area.cpp  capacitance.cpp  catalytic_activity.cpp  conductance.cpp  density.cpp  dose_equivalent.cpp  electric_charge.cpp  electric_current.cpp  energy.cpp  force.cpp  frequency.cpp  heat_capacity.cpp  illuminance.cpp  inductance.cpp  length.cpp  luminosity.cpp  luminous_flux.cpp  magnetic_flux.cpp  magnetic_flux_density.cpp  mass.cpp  molar_energy.cpp  molar_heat_capacity.cpp  molar_mass.cpp  molar_volume.cpp  momentum.cpp  potential_electromotive_force.cpp  power.cpp  pressure.cpp  resistance.cpp  solubility_parameter.cpp  specific_heat_capacity.cpp  temperature.cpp  time.cpp  velocity.cpp  volume.cpp
(+156 files in other folders)
